# template-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  DockerfileGPU  Readme.md  change_gpu_config.py  config.ini  devcontainer.json  devcontainer_creator.bash
.devcontainer/scripts/: create_python_env.sh  post_create.sh  post_start.sh
.devcontainer/utils/: create_links.bash
.github/workflows/: base_image_validity.yaml  pre-commit.yaml  version.yaml
classes/: 00_preprocess.py  01_model.py  02_train.py  03_predict.py
notebooks/: pytorch.ipynb  tensorflow.ipynb  validation_notebook.ipynb
