[tool.poetry]
name = "template-python-project"
version = "0.1.0"
description = ""
authors = ["huyghebaertthomas <thomas.huyghebaert@howest.be>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"