[tool.poetry]
name = "template-python-project"
version = "0.1.0"
description = ""
authors = ["huyghebaertthomas <thomas.huyghebaert@howest.be>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
black = "^24.10.0"
pylint = "^3.3.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"